# structure-aware-dithering

./: LICENSE  README.md  pyproject.toml
src/: dither.py
src/dither/: __init__.py
utils/: generate-gradient.py  generate-steps-gradient.py
