[project]
name = "dither"
version = "0.1.0"
description = "Modern bi-level, digital halftoning algorithms in Python"
authors = [
    {name = "dalpil", email = "47555+dalpil@users.noreply.github.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pillow>=10.4.0",
    "scikit-image",
]

[project.scripts]
dither = "dither:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
